fix(avatar): fix avatar white spaces

--- a/packages/design/components/Avatar/style/index.less
+++ b/packages/design/components/Avatar/style/index.less
@@ -6,6 +6,7 @@
 
   img {
     object-fit: cover;
+    vertical-align: middle;
   }
 
   &--small img {
